# stepRecoveryMPC

./: .gitignore  CMakeLists.txt
app/robots/icubGazeboSim/: mpc.ini
include/: MPCIpOptSolver.h  MPCIpOptSolverImplicit.h  StepRecoveryCoordinator.h  StepRecoveryMPC.h
src/: MPCIpOptSolver.cpp  MPCIpOptSolverImplicit.cpp  StepRecoveryCoordinator.cpp  StepRecoveryMPC.cpp
